@@ -82,7 +82,7 @@ public class AuthService {
         if(result.isEmpty()){
             throw new ResourceNotFoundException("token invalido");
         }
-        User user = userRepository.findByEmail(result.getFirst().getEmail());
+        User user = userRepository.findByEmail(result.get(0).getEmail());
         user.setPassword(passwordEncoder.encode(body.password()));
         user = userRepository.save(user);
     }
